--- a/PromotionEngine.Tests/PromotionEngine.Tests.csproj
+++ b/PromotionEngine.Tests/PromotionEngine.Tests.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PromotionEngine.Core\PromotionEngine.Core.csproj" />
+    <ProjectReference Include="..\PromotionEngine.Lib\PromotionEngine.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
