--- a/PromotionEngine.DataServices/PromotionEngine.DataServices.csproj
+++ b/PromotionEngine.DataServices/PromotionEngine.DataServices.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PromotionEngine.Domains\PromotionEngine.Domains.csproj" />
+  </ItemGroup>
+
 </Project>
