--- a/PromotionEngine.Core/PromotionEngine.Core.csproj
+++ b/PromotionEngine.Core/PromotionEngine.Core.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PromotionEngine.DataServices\PromotionEngine.DataServices.csproj" />
+    <ProjectReference Include="..\PromotionEngine.Domains\PromotionEngine.Domains.csproj" />
+  </ItemGroup>
+
 </Project>
