--- a/PromotionEngine.Tests/PromotionEngine.Tests.csproj
+++ b/PromotionEngine.Tests/PromotionEngine.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PromotionEngine.Core\PromotionEngine.Core.csproj" />
+    <ProjectReference Include="..\PromotionEngine.Domains\PromotionEngine.Domains.csproj" />
     <ProjectReference Include="..\PromotionEngine.Lib\PromotionEngine.Lib.csproj" />
   </ItemGroup>
 
