refactored code to support loosely coupled data services via interface and in-memory data provider.

--- a/PromotionEngine.DataServices/PromotionEngine.DataServices.csproj
+++ b/PromotionEngine.DataServices/PromotionEngine.DataServices.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Providers\InMemory\ProductDataService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PromotionEngine.Domains\PromotionEngine.Domains.csproj" />
   </ItemGroup>
 
